docs: add v1.0.7 release notes to index